--- a/AltoConsejo/build.gradle
+++ b/AltoConsejo/build.gradle
@@ -4,9 +4,9 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'Seguridad'
+group = 'Secreto'
 version = '0.0.1-SNAPSHOT'
-description = 'Inicio de Sesión de alto Consejo'
+description = 'La pagina del Alto consejo'
 
 java {
 	toolchain {
