--- a/carritoDeLaCompra/src/main/resources/application.properties
+++ b/carritoDeLaCompra/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=carritoDeLaCompra
-spring.datasource.url=jdbc:mysql://localhost:3306/dwes1
+spring.datasource.url=jdbc:mysql://localhost/dwes2
 spring.datasource.username=daw2
 spring.datasource.password=LaElipa
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
