--- a/Sesiones - bases de datos/src/main/resources/application.properties
+++ b/Sesiones - bases de datos/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=ProyectoR3UD2
+
+spring.datasource.url=jdbc:mysql://localhost/dwes1
+
+spring.datasource.username=daw2
+
+spring.datasource.password=LaElipa
+
+spring.jpa.generate-ddl=true
+
+
