--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=D4-UD2
+spring.application.name=Alumno-notas
+spring.datasource.url=jdbc:mysql://localhost/dwes1
+spring.datasource.username=daw2
+spring.datasource.password=LaElipa
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
